
Changes in Go4 v4.02.00 (April 09)

1. Merge Go4 version 3 with Go4 version 4 together - now
   same package can be compiled either with Qt 3.3 or Qt 4.4.x.
   Version of Qt can be selected by setting proper QTDIR path.
   If QTDIR is not set, default version will be used (if any) 
2. Replace html documents by pdf, use external pdf viewer for them.
3. Reduce usage of qt3support classes in qt4 part of gui.   


Changes in Go4 v4.01.01 (November08)

1. Maintenance: code adjustments for compilers gcc 4.3.x

2. Bugfix for Qt problem: QProcess was put into infinite loop 
after first stderr output to Go4 analysis window. 
Workaround: redirect stderr to stdout in analysis startup script.

3. Bugfix: counter overflow in TGo4MbsSource would stop taking 
events from mbs connections and let process last read event 
multiple times

4. Several small bugfixes.

Changes in Go4 v4.01.00 (October08)

1. New toolwindow DABC Monitor: Allows to inspect all info services
registered to any DIM server. Any DABC ratemeter service running on 
DABC or MBS nodes may be monitored and filled into trending and 
statistic histograms. This tool is build optionally if environment 
$DIMDIR is set and DIM is installed there.

2. Bugfix: MbsAPI streamserver connection timeout was not working 
correctly (leads to hangup of analysis control when no data is 
delivered from streamserver).

3. Bugfix: Viewpanel canvas was not working with Qt >= 4.4.x (empty
widget with grey background) because Qt workspace may change 
X-window id at runtime.  Improved Go4QtRoot interface
classes to reset winId dynamically on resize. Modified rendering of
TQRootCanvas to avoid unnecessary Qt double buffering.

4. Bugfix: Viewpanel embedded TGedEditor was sometimes not displayed
at startup. Improved Go4QtRoot interface to avoid extra Resize()
in TQRootWindow::paintEvent which may lose coordinates of 
primary editor tab.

5. Bugfix: "Settings/Style" menu would crash GUI sometimes due to